Add delete user and add new user + documentation
